notifications: Do not crash as notifications get removed

Make sure notifications do not get deleted or reused until we are done
with them.

BUG: 464549